Issue #2978107: Changed [VMI] Tout content group z-index to 3 for in the tout view mode

--- a/less/tout/layout/tout.less
+++ b/less/tout/layout/tout.less
@@ -13,7 +13,7 @@
     left: 0;
     right: 0;
     padding: @xsmall-title-font-size;
-    z-index: 1;
+    z-index: 3;
     display: flex;
     align-self: flex-end;
 
